fixed size of categroy images on mobile view

--- a/style.css
+++ b/style.css
@@ -590,14 +590,16 @@ footer {
   }
 
   .category-image {
-    min-height: 250px;
+    min-height: 70vw;;
     background: url("https://cdn0.tnwcdn.com/wp-content/blogs.dir/1/files/2019/01/iPhone-SE-hed-368x276.jpg");
     background-size: cover;
+    display: flex;
   }
 
   .inner-details {
     min-height: 250px;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1));
+    display: flex;
   }
 
   .picture-anchor {
@@ -613,6 +615,7 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: stretch;
+    align-self: flex-end;
   }
 
   .information h5 {
